# llvm-project

./: .gitignore
clang-tools-extra/: CMakeLists.txt
clang-tools-extra/clangd/tool/: Check.cpp
clang-tools-extra/declarative-prototype/: Andersen.cpp  Andersen.h  CMakeLists.txt  CallGraph.h  CustomMatchers.h  DeclarativeCheckingVisitor.h  DeclarativeCheckingVisitorUtils.h  DeclarativePrototype.cpp  README.txt  basics.sh
clang-tools-extra/declarative-prototype/extra/: AndersenTest.cpp
clang-tools-extra/declarative-prototype/include/: Andersen.h  CallGraph.h  DeclarativeCheckingVisitorUtils.h  DeclarativeFunctionVisitor.h  DependencyGraph.h  Utils.h
clang-tools-extra/declarative-prototype/lib/: CMakeLists.txt  DeclarativeFunctionVisitor.cpp  DependencyGraph.cpp
clang-tools-extra/declarative-prototype/showcase_examples/: ex1.cpp  ex2.cpp  ex3.cpp  ex5.cpp  ex6.cpp
clang-tools-extra/declarative-prototype/tests/: test01.cpp  test02.cpp  test03.cpp  test04.cpp  test05.cpp  test06.cpp  test07.cpp  test08.cpp  test09.cpp  test10.cpp  test11.cpp  test12.cpp  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test18.cpp  test19.cpp  test20.cpp  test21.cpp  test22.cpp  test23.cpp  test24.cpp  test25.cpp
clang-tools-extra/dump-all/: CMakeLists.txt  DumpAll.cpp
clang/lib/StaticAnalyzer/: CMakeLists.txt
clang/lib/StaticAnalyzer/Checkers/: CMakeLists.txt  DeclarativeChecker.cpp
clang/lib/StaticAnalyzer/Declarative/: CMakeLists.txt  CollectDeclRefExprVisitor.cpp  DeclarativeFunctionVisitor.cpp  DependencyGraph.cpp  README.md
(+21 files in other folders)
